# rwkv-gepa-distill

./: .env.example  .gitignore  README.md  pyproject.toml  watch.json
config/: world_pipeline.example.yaml  world_pipeline.yaml
config/datasets/: mmlu.toml  mmlu_auxiliary_train.toml  world_knowledge.toml
configs/: smoke.yaml
data/seeds/: train.jsonl  val.jsonl
distill_gepa/: __init__.py  async_request_runner.py  classify_world_questions.py  common.py  constants.py  dataset_adapters.py  dataset_config.py  dataset_prepare.py  dataset_toml.py  export_rwkv_dataset.py  export_sft_dataset.py  filter_mmlu_batch.py  generate_mmlu_batch.py  generate_small_dataset.py  materialize_complex_distill.py  merge_world_distill.py  mmlu_adapter_shared.py  mmlu_score.py  model_registry.py  optimize_mmlu_prompt.py  optimize_prompt.py  optimize_world_prompts.py  pipeline.py  question_pools.py  reflection_lm.py  render_question_flow_html.py  request_cache.py  request_runner.py  rewrite_world_questions.py  run_seed_pipeline.py  run_world_benchmark.py  sample_review_set.py  score.py  seed_pipeline_schema.py  task_schema.py  teacher_client.py  trajectory_schema.py  world_prompts.py  world_schema.py  world_scoring.py
scripts/: bootstrap.sh  fetch_vendor.sh  prepare_dataset.py  prepare_mmlu_pools.py  prepare_world_knowledge_pools.py  run_pipeline.py  scheduler.py  step1_smoke.sh  step2_mmlu_batch.sh  step3_mmlu_full.sh
v1/: README.md  config.toml  export_variants_to_parquet.py  synthesize_mmlu.py
