[project]
name = "rwkv-gepa-distill"
version = "0.1.0"
description = "Strict-JSON GEPA prompt optimization and RWKV dataset export pipeline"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets",
    "gepa",
    "openai",
    "orjson",
    "python-dotenv",
    "pyyaml",
    "tenacity",
    "tqdm",
]
